# stackchan-kai

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  STABILITY.md  clippy.toml  deny.toml  flake.nix  justfile  release-please-config.json
.githooks/: check-readme-reminders.sh  commit-msg  pre-commit
.github/workflows/: ci.yml  release-please.yml
crates/aw88298/: CHANGELOG.md  Cargo.toml  README.md
crates/aw88298/src/: lib.rs
crates/aw9523/: CHANGELOG.md  Cargo.toml  README.md
crates/aw9523/src/: lib.rs
crates/axp2101/: CHANGELOG.md  Cargo.toml  README.md
crates/axp2101/src/: lib.rs
crates/bm8563/: CHANGELOG.md  Cargo.toml  README.md
crates/bm8563/src/: lib.rs
crates/bmi270/: CHANGELOG.md  Cargo.toml  README.md
crates/bmi270/src/: config_blob.rs  lib.rs
crates/bmm150/: Cargo.toml  README.md
crates/bmm150/src/: lib.rs
crates/es7210/: CHANGELOG.md  Cargo.toml  README.md
crates/es7210/src/: lib.rs
crates/ft6336u/: CHANGELOG.md  Cargo.toml  README.md
crates/ft6336u/src/: lib.rs
crates/gc0308/: CHANGELOG.md  Cargo.toml  README.md
crates/gc0308/src/: lib.rs  regs.rs
crates/ir-nec/: CHANGELOG.md  Cargo.toml  README.md
crates/ir-nec/src/: lib.rs
crates/ltr553/: CHANGELOG.md  Cargo.toml  README.md
crates/ltr553/src/: lib.rs
crates/pca9685/: Cargo.toml
crates/pca9685/src/: lib.rs
crates/py32/: Cargo.toml  README.md
crates/py32/src/: lib.rs
crates/scservo/: CHANGELOG.md  Cargo.toml  README.md
crates/scservo/src/: lib.rs
crates/si12t/: CHANGELOG.md  Cargo.toml  README.md
crates/si12t/src/: lib.rs
crates/st25r3916/: Cargo.toml  README.md
crates/st25r3916/src/: lib.rs
crates/stackchan-core/: CHANGELOG.md  Cargo.toml  README.md
crates/stackchan-core/src/: avatar.rs  clock.rs  director.rs  draw.rs  emotion.rs  entity.rs  events.rs  face.rs  head.rs  input.rs  leds.rs  lib.rs  lipsync.rs  mind.rs  modifier.rs  motor.rs  perception.rs  skill.rs  voice.rs
crates/stackchan-core/src/modifiers/: ambient_sleepy.rs  attention_from_tracking.rs  blink.rs  body_gesture.rs  breath.rs  dormancy_from_activity.rs  emotion_cycle.rs  emotion_from_ambient.rs  emotion_from_battery.rs  emotion_from_intent.rs  emotion_from_remote.rs  emotion_from_touch.rs  emotion_from_voice.rs  emotion_head.rs  emotion_style.rs  emotion_touch.rs  gaze_from_attention.rs  head_from_attention.rs  head_from_emotion.rs  head_from_intent.rs  idle_drift.rs  idle_head_drift.rs  idle_sway.rs  intent_from_body_touch.rs  intent_from_loud.rs  intent_reflex.rs  intent_style.rs  listen_head.rs  lost_target_search.rs  low_battery.rs  microsaccade_from_attention.rs  mod.rs  mouth_from_audio.rs  mouth_open_audio.rs  pickup_reaction.rs  remote_command.rs  startle_head.rs  startle_on_loud.rs  style_from_emotion.rs  style_from_intent.rs  (+1 more)
crates/stackchan-core/src/skills/: handling.rs  listening.rs  look_at_sound.rs  mod.rs  petting.rs
crates/stackchan-firmware/: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
crates/stackchan-firmware/.cargo/: config.toml
crates/stackchan-firmware/examples/: ambient_bench.rs  audio_bench.rs  aw88298_bench.rs  bench.rs  es7210_bench.rs  face_bench.rs  i2c_probe.rs  imu_bench.rs  ir_bench.rs  leds_bench.rs  mag_bench.rs  si12t_bench.rs  tilt_extremes.rs  tilt_freewheel.rs  touch_bench.rs  tracker_bench.rs
crates/stackchan-firmware/src/: ambient.rs  audio.rs  aw9523.rs  board.rs  body_touch.rs  button.rs  camera.rs  clock.rs  framebuffer.rs  head.rs  imu.rs  ir.rs  leds.rs  lib.rs  mag.rs  main.rs  power.rs  sd_spi.rs  storage.rs  touch.rs  tracking_trace.rs  wallclock.rs  watchdog.rs
crates/stackchan-firmware/src/ble/: bonds.rs  mod.rs  server.rs  task.rs
crates/stackchan-firmware/src/net/: dashboard.html  http.rs  json.rs  mdns.rs  mod.rs  snapshot.rs  sntp.rs  stack.rs  wifi.rs
crates/stackchan-net/: Cargo.toml  README.md
crates/stackchan-net/src/: bare.rs  bare_json.rs  ble_command.rs  config.rs  error.rs  http_command.rs  http_parse.rs  lib.rs
crates/stackchan-net/tests/: golden_config.rs
crates/stackchan-net/tests/fixtures/: bad-country.ron  bad-hostname.ron  empty-sntp-entry.ron  empty-ssid.ron  full.ron  lowercase-country.ron  minimal.ron  no-sntp-servers.ron
crates/stackchan-sim/: CHANGELOG.md  Cargo.toml  README.md
crates/stackchan-sim/src/: lib.rs
crates/stackchan-sim/tests/: attention_from_tracking.rs  ble_remote_command.rs  body_gesture.rs  dormancy_head_drift.rs  dormancy_sway.rs  gaze_from_attention.rs  head_from_attention.rs  head_sway.rs  idle_head_drift.rs  intent_from_loud.rs  leds.rs  listening.rs  look_at_sound.rs  lost_target_search.rs  microsaccade_from_attention.rs  petting.rs  remote_command.rs  render_snapshot.rs  startle_on_loud.rs  tracking_handoff.rs
crates/stackchan-tts/: Cargo.toml  README.md
crates/stackchan-tts/assets/: README.md  manifest.toml
crates/stackchan-tts/src/: backend.rs  baked.rs  lib.rs  source.rs
crates/tracker/: CHANGELOG.md  Cargo.toml  README.md
crates/tracker/data/: README.md
crates/tracker/src/: cascade.rs  cascade_data.rs  lib.rs  luma.rs
docs/: _config.yml  architecture.md  errors.md  http.md  index.md  modifiers.md  naming.md  signals.md
scripts/: bake-tts.sh  ble-smoke.sh  check-boot.sh  check-doc-drift.sh  dev-status.sh  fmr-agent.sh
tests/golden/: boot.txt
xtask/: Cargo.toml
xtask/src/: main.rs
