[workspace]
resolver = "2"
members = [
    "crates/stackchan-core",
    "crates/stackchan-sim",
    "crates/axp2101",
    "crates/aw9523",
    "crates/stackchan-firmware",
]
default-members = [
    "crates/stackchan-core",
    "crates/stackchan-sim",
    "crates/axp2101",
    "crates/aw9523",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/andymai/stackchan-rs"
rust-version = "1.88"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Strict lints: zero panics in library code.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
missing_docs_in_private_items = "warn"
# Types like `EyePhase::Open` read naturally without the module prefix.
module_name_repetitions = "allow"
# Enforce #[must_use] on all public return values.
must_use_candidate = "deny"
# Errors sections added to all Result-returning public fns.
missing_errors_doc = "warn"
# Panic paths are already denied; documenting them is redundant.
missing_panics_doc = "allow"
# Embedded code frequently casts between integer widths for register I/O;
# the firmware crate disables these via its own manifest. Core + sim inherit
# deny-style behaviour (no lints).

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[workspace.dependencies]
# Core + sim shared deps. Firmware-side deps (esp-hal, embassy, mipidsi) are
# pinned inside crates/stackchan-firmware/Cargo.toml to keep the no_std + host
# halves of the workspace from leaking into each other.
embedded-graphics = "0.8"
embedded-graphics-core = "0.4"
embedded-hal = "1"
embedded-hal-async = "1"
fugit = "0.3"

[profile.release]
# Firmware profile: maximum inlining + debuginfo for defmt symbol resolution.
lto = "fat"
codegen-units = 1
opt-level = "z"
debug = true
overflow-checks = true

[profile.dev]
opt-level = "s"
overflow-checks = true
