[workspace]
resolver = "2"
members = [
    "crates/stackchan-core",
    "crates/stackchan-sim",
    "crates/aw88298",
    "crates/axp2101",
    "crates/aw9523",
    "crates/bm8563",
    "crates/bmi270",
    "crates/bmm150",
    "crates/es7210",
    "crates/ft6336u",
    "crates/gc0308",
    "crates/ir-nec",
    "crates/ltr553",
    "crates/py32",
    "crates/scservo",
    "crates/si12t",
    "crates/st25r3916",
    "crates/tracker",
    "crates/stackchan-firmware",
]
default-members = [
    "crates/stackchan-core",
    "crates/stackchan-sim",
    "crates/aw88298",
    "crates/axp2101",
    "crates/aw9523",
    "crates/bm8563",
    "crates/bmi270",
    "crates/bmm150",
    "crates/es7210",
    "crates/ft6336u",
    "crates/gc0308",
    "crates/ir-nec",
    "crates/ltr553",
    "crates/py32",
    "crates/scservo",
    "crates/si12t",
    "crates/st25r3916",
    "crates/tracker",
]

[workspace.package]
# Per-crate `version` is declared literally in each member crate's
# Cargo.toml — not via `version.workspace = true` — because
# release-please's `cargo-workspace` plugin at v4 can't parse
# workspace-inherited version fields and errors with
# `has an invalid [package.version]`.
#
# Versions are independent per crate. release-please tracks each
# package's commit history by path and only bumps the ones whose
# files actually changed in a given release window. The
# `cargo-workspace` plugin (`merge: true` in
# release-please-config.json) batches whatever bumped into a single
# release PR + single git tag (e.g. `v0.9.0`), but per-crate
# version numbers stay honest semver against each crate's own API
# surface. As of v0.9.0 the workspace spans 17 crates ranging from
# `aw88298 0.3.0` (untouched since the audio bring-up) to
# `stackchan-firmware 0.9.x` (bumped on most cycles).
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/andymai/stackchan-kai"
rust-version = "1.88"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Strict lints: zero panics in library code.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
missing_docs_in_private_items = "warn"
# Types like `EyePhase::Open` read naturally without the module prefix.
module_name_repetitions = "allow"
# Enforce #[must_use] on all public return values.
must_use_candidate = "deny"
# Errors sections added to all Result-returning public fns.
missing_errors_doc = "warn"
# Panic paths are already denied; documenting them is redundant.
missing_panics_doc = "allow"
# Embedded code frequently casts between integer widths for register I/O;
# the firmware crate disables these via its own manifest. Core + sim inherit
# deny-style behaviour (no lints).

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[workspace.dependencies]
# Core + sim shared deps. Firmware-side deps (esp-hal, embassy, mipidsi) are
# pinned inside crates/stackchan-firmware/Cargo.toml to keep the no_std + host
# halves of the workspace from leaking into each other.
embedded-graphics = "0.8"
embedded-graphics-core = "0.4"
embedded-hal = "1"
embedded-hal-async = "1"
embedded-io-async = "0.7"
fugit = "0.3"

[profile.release]
# Firmware profile: maximum inlining + debuginfo for defmt symbol resolution.
lto = "fat"
codegen-units = 1
opt-level = "z"
debug = true
overflow-checks = true

[profile.dev]
opt-level = "s"
overflow-checks = true
