[package]
name = "aw88298"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Scaffold: minimal async I²C control-path driver for the Awinic AW88298 smart-K audio amplifier. I2S audio transport is out of scope."

[lints]
workspace = true

[dependencies]
embedded-hal-async = { workspace = true }
