[package]
name = "bm8563"
version = "0.7.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Minimal async driver for the NXP BM8563 / PCF8563 real-time clock over I²C. no_std; embedded-hal-async 1.0; no chrono dep."

[lints]
workspace = true

[dependencies]
embedded-hal-async = { workspace = true }
