[package]
name = "bmi270"
version = "0.6.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Minimal async driver for the Bosch BMI270 6-axis IMU (accel + gyro) over I²C. no_std; embedded-hal-async 1.0."

[lints]
workspace = true

[dependencies]
embedded-hal-async = { workspace = true }
