[package]
name = "es7210"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Scaffold: minimal async I²C control-path driver for the Everest ES7210 4-channel audio ADC. I2S/TDM audio transport is out of scope."

[lints]
workspace = true

[dependencies]
embedded-hal-async = { workspace = true }
