[package]
name = "es7210"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Minimal async I²C control-path driver for the Everest ES7210 4-channel audio ADC. Fixed shape: 12.288 MHz MCLK, 16 kHz mono, mic1+2 on. I2S audio transport is out of scope."

[lints]
workspace = true

[dependencies]
embedded-hal-async = { workspace = true }
