[package]
name = "ft6336u"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Minimal async driver for the FocalTech FT6336U capacitive touch controller. Single-touch point reads over I²C; used on the M5Stack CoreS3 behind the ILI9342C LCD."

[lints]
workspace = true

[dependencies]
embedded-hal-async = { workspace = true }
