[package]
name = "gc0308"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Minimal async I²C / SCCB control-path driver for the GalaxyCore GC0308 VGA CMOS camera. Covers chip-ID probe, default-register table, format / window / streaming control. Parallel/DVP video transport is out of scope."

[lints]
workspace = true

[dependencies]
embedded-hal-async = { workspace = true }
