[package]
name = "ir-nec"
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pure-logic no_std NEC IR-remote protocol codec. Decodes pulse-timing slices into address + command words; encodes commands into 67-pulse frames. No hardware dependency."

[lints]
workspace = true

[dependencies]
