[package]
name = "pca9685"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Minimal no_std driver for the NXP PCA9685 16-channel 12-bit PWM/servo controller over I²C."

[lints]
workspace = true

[dependencies]
embedded-hal-async = { workspace = true }
