[package]
name = "py32"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Driver for the Stack-chan CoreS3 PY32 IO expander (I²C 0x6F): GPIO output config for servo-power enable and WS2812 fan-out for the 12-LED ring."

[lints]
workspace = true

[dependencies]
embedded-hal-async = { workspace = true }
