[package]
name = "st25r3916"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Scaffold: minimal async SPI driver for the STMicroelectronics ST25R3916 NFC reader / writer. Direct-command and register-access layer; RFAL / protocol stack is out of scope."

[lints]
workspace = true

[dependencies]
embedded-hal-async = { workspace = true }
