[package]
name = "stackchan-core"
version = "0.6.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "no_std domain library for the StackChan avatar: geometry, expressions, motion modifiers."
readme = "README.md"

[lints]
workspace = true

[dependencies]
# `embedded-graphics` is the only non-trivial dep: `Avatar::draw` takes any
# `DrawTarget<Color = Rgb565>`, so the same rendering code runs against a
# mipidsi Display on hardware and a Vec-backed framebuffer in the sim crate.
# Kept at the workspace-pinned version so the firmware's mipidsi build sees
# the same e-g 0.8 types this crate emits.
embedded-graphics = { workspace = true }
# `micromath` brings `f32::mul_add`, `ln`, etc. to `no_std` without
# pulling in full libm. Used by `MouthOpenAudio` for the dB mapping +
# envelope math. Already in the transitive tree (esp-hal pulls it), so
# adding it as a direct dep costs nothing on the firmware side.
micromath = "2"
