[package]
name = "stackchan-firmware"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "no_std + alloc firmware binary for the M5Stack CoreS3 StackChan; wires the stackchan-core domain onto esp-hal + mipidsi."
publish = false

[lints]
workspace = true

[dependencies]
stackchan-core = { path = "../stackchan-core" }
axp2101 = { path = "../axp2101" }
embedded-hal-async = { workspace = true }

# Crate versions chosen to match the upstream `esp-generate` esp-hal 1.0
# template. Mixing versions outside this set hits feature-unification
# errors (the crates ship coordinated internal features that move in
# lockstep). `esp-rtos` is the current embassy integration; it replaced
# `esp-hal-embassy` for the 1.0 line.
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["defmt", "embassy", "esp-alloc", "esp32s3"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }

defmt = "1.0.1"
rtt-target = { version = "0.6.2", features = ["defmt"] }

critical-section = "1.2.0"
static_cell = "2.1.1"

[[bin]]
name = "stackchan-firmware"
path = "src/main.rs"
