[package]
name = "stackchan-firmware"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "no_std + alloc firmware binary for the M5Stack CoreS3 StackChan; wires the stackchan-core domain onto esp-hal + mipidsi."
publish = false

[lints]
workspace = true

[dependencies]
stackchan-core = { path = "../stackchan-core" }
axp2101 = { path = "../axp2101" }
aw9523 = { path = "../aw9523" }
scservo = { path = "../scservo" }
embedded-graphics = { workspace = true }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-io-async = { workspace = true }
# `ExclusiveDevice` wraps the blocking esp-hal `Spi` + a CS pin into the
# `SpiDevice` shape `display-interface-spi` wants. No `critical-section`
# feature needed while the LCD is the sole SPI user.
embedded-hal-bus = "0.3"
# `mipidsi` drives the ILI9342C on CoreS3 over SPI. Its built-in
# `interface::SpiInterface` packages an SpiDevice + DC-pin into the
# `Interface` trait the driver consumes — no separate
# `display-interface-spi` needed at the 0.10 release.
mipidsi = "0.10"

# Crate versions chosen to match the upstream `esp-generate` esp-hal 1.0
# template. Mixing versions outside this set hits feature-unification
# errors (the crates ship coordinated internal features that move in
# lockstep). `esp-rtos` is the current embassy integration; it replaced
# `esp-hal-embassy` for the 1.0 line.
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "psram", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["defmt", "embassy", "esp-alloc", "esp32s3"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
# `Signal<CriticalSectionRawMutex, Pose>` hands the latest pose from the
# render task (which runs modifiers, incl. `IdleSway`) to the 50 Hz head
# task. 0.7 matches the embassy-executor 0.9 / embassy-time 0.5 triple
# per the embassy-sync release matrix.
embassy-sync = { version = "0.7", features = ["defmt"] }

defmt = "1.0.1"
# Log transport: defmt-encoded bytes over the ESP32-S3 USB-Serial-JTAG
# peripheral. `espflash flash --monitor --log-format defmt` decodes on
# the host side. No RTT probe, no host-level udev rules — just the
# same /dev/ttyACM1 serial path already used with dialout-group access.
esp-println = { version = "0.17.0", default-features = false, features = [
    "esp32s3",
    "defmt-espflash",
    "jtag-serial",
    "critical-section",
] }

critical-section = "1.2.0"
static_cell = "2.1.1"

[lib]
name = "stackchan_firmware"
path = "src/lib.rs"

[[bin]]
name = "stackchan-firmware"
path = "src/main.rs"

[[example]]
name = "bench"
path = "examples/bench.rs"
