[package]
name = "stackchan-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Networking domain types + offline-first RON config schema for the Stack-chan avatar (no_std + alloc)."
readme = "README.md"

[lints]
workspace = true

[dependencies]
# `no_std` serde with derive macros. The `alloc` feature lets `String`
# / `Vec<T>` participate in the schema — the firmware reads the config
# off SD into a heap-allocated `String`, then parses through this crate.
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
# RON (Rusty Object Notation) — chosen for ergonomic Rust-shaped config
# (enums, comments, trailing commas). 0.10 is `no_std + alloc`-compatible
# with `default-features = false` — `alloc` support is implicit, not a
# named feature. The full `Serialize`/`Deserialize` round trip is what
# `PUT /settings` and `GET /settings` lean on.
ron = { version = "0.10", default-features = false }
# Typed errors without `std`. v2 supports `no_std` natively; firmware
# wraps with `defmt::Debug2Format` rather than this crate deriving
# `defmt::Format` — keeps the host crate independent of the firmware
# log transport.
thiserror = { version = "2", default-features = false }
