[package]
name = "stackchan-net"
version = "0.2.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Networking domain types + offline-first RON config schema for the Stack-chan avatar (no_std + alloc)."
readme = "README.md"

[lints]
workspace = true

[features]
# `parse` exposes `parse_ron` / `render_ron` and the serde derives on
# the data types. Default-on for host builds (sim, tests, future
# host-side tooling). The firmware crate depends on this without
# `parse` because `ron 0.10` hard-pins `serde/std` and `base64/std` —
# both are broken on `xtensa-esp32s3-none-elf`. Firmware-side RON
# parsing happens in a hand-rolled parser inside `stackchan-firmware`.
default = ["parse"]
parse = ["dep:serde", "dep:ron"]

[dependencies]
# Domain types for the HTTP control plane (`Emotion`, `Pose`,
# `Locale`, `PhraseId`, `Priority`, `RemoteCommand`). Pulled
# unconditionally — the JSON body parsers in `http_command` map
# directly onto these types.
stackchan-core = { path = "../stackchan-core" }
# `no_std` serde with derive macros. Optional; only pulled when the
# `parse` feature is active. Firmware target avoids it because of the
# transitive `serde/std` requirement upstream of ron.
serde = { version = "1", default-features = false, features = ["alloc", "derive"], optional = true }
# RON (Rusty Object Notation). Optional behind `parse`. Same reason
# as `serde` — host-only.
ron = { version = "0.12", default-features = false, optional = true }
# Typed errors without `std`. Always on — not parse-gated. Firmware
# wraps with `defmt::Debug2Format`.
thiserror = { version = "2", default-features = false }
