[package]
name = "stackchan-sim"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Headless simulator for stackchan-core: runs modifiers against a fake clock for deterministic integration tests."
publish = false

[lints]
workspace = true

[dependencies]
stackchan-core = { path = "../stackchan-core" }
# Used by `Framebuffer` — the Vec<Rgb565>-backed `DrawTarget` that lets
# render-regression tests assert against `Avatar::draw` without hardware.
embedded-graphics = { workspace = true }
