[package]
name = "tracker"
version = "0.9.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "no_std block-grid motion tracker that turns RGB565 camera frames into pan/tilt head poses for the Stack-chan."
readme = "README.md"

[lints]
workspace = true

[dependencies]
# `Pose` lives in stackchan-core so the tracker can publish poses
# directly into the firmware's existing `POSE_SIGNAL` plumbing without
# a marshalling layer.
stackchan-core = { path = "../stackchan-core" }
# `heapless::Vec` for the multi-target candidate list emitted per
# `step` — fixed cap (`MAX_CANDIDATES`) so no `alloc` needed.
heapless = "0.8"
