[package]
name = "tracker"
version = "0.11.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "no_std block-grid motion tracker that turns RGB565 camera frames into pan/tilt head poses for the Stack-chan."
readme = "README.md"

[lints]
workspace = true

[dependencies]
# `Pose` lives in stackchan-core so the tracker can publish poses
# directly into the firmware's existing `POSE_SIGNAL` plumbing without
# a marshalling layer.
stackchan-core = { path = "../stackchan-core" }
# `heapless::Vec` for the multi-target candidate list emitted per
# `step` — fixed cap (`MAX_CANDIDATES`) so no `alloc` needed.
heapless = "0.8"
# `libm` provides `f64::sqrt` etc. against `no_std`. Used by the
# cascade scorer's variance-norm computation; the alternative is a
# Newton-Raphson loop in pure Rust which costs more lines than it
# saves.
libm = "0.2"
